--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,6 @@ Django==4.2.2
 sqlparse==0.4.4
 typing_extensions==4.6.3
 django-cors-headers==3.13.0
+django-rest-framework
+djangorestframework-simplejwt
+requests
